# ds3231-rtc

./: Cargo.toml  README.md
src/: control.rs  datetime.rs  ds3231.rs  error.rs  lib.rs  registers.rs  square_wave.rs
