[package]
name = "ds3231-rtc"
version = "0.1.3"
edition = "2024"
authors = ["ImplFerris"]
description = "A no_std driver for the DS3231 Real Time Clock (RTC) module"
license = "MIT"
repository = "https://github.com/implferris/ds3231-rtc"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["ds3231", "rtc", "clock", "time", "driver"]

[dependencies]
embedded-hal = "1.0.0"
rtc-hal = "0.1.2"
defmt = { version = "1.0.1", optional = true }

[features]
default = []
defmt = ["dep:defmt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["thumbv7m-none-eabi", "thumbv7em-none-eabihf"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", "features" = ["eh1"] }
